# craw_launcher

./: .gitignore  ABOUT.md  AGENTS.md  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-cli.yml  ci.yml  release.yml
docs/: auto-build-and-update.md  claw-package-verification.md  cli.md  macos-build.md  user-guide-zh.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.en-US.conf.json  tauri.zh-CN.conf.json  updater-public-key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: acp_stream_helper.mjs  gateway_subscriber.mjs
src-tauri/src/: build_locale.rs  cli.rs  lib.rs  main.rs
src-tauri/windows/: SimpChinese.nsh  file-associations.nsh  tauri-installer-template.nsi
src/lib/: api.ts  buildLocale.ts  i18n.ts  store.ts  types.ts
tools/: build-release.bat  build-release.sh  emoji-icon.html  finalize-release-binary.mjs  generate-updater-manifest.mjs  package-cli.mjs  rename-nsis-artifact.mjs  set-build-locale.mjs
