[package]
name = "openclaw_launcher"
version = "0.1.5"
description = "OpenClaw profile and gateway launcher"
authors = ["Codex"]
edition = "2021"
default-run = "openclaw_launcher"

[lib]
name = "openclaw_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openclaw_launcher"
path = "src/main.rs"

[[bin]]
name = "claws-cli"
path = "src/bin/claws-cli.rs"
required-features = ["standalone-cli"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-process = "2.2.1"
tauri-plugin-updater = "2.7.1"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
standalone-cli = []
